@@ -23,7 +23,7 @@ sig_child(int sig)
     child_exit = 1;
 }
 
-// args = read_arg_lines("EA: ", ifp, &arg_count, &line);
+/* args = read_arg_lines("EA: ", ifp, &arg_count, &line); */
 char **
 read_arg_lines(const char *prefix, FILE *ifp, int *arg_count, char **final_line,
 	       int *llen)
@@ -53,7 +53,7 @@ read_arg_lines(const char *prefix, FILE *ifp, int *arg_count, char **final_line,
                 args = realloc(args, sizeof(char *) * arg_max);
             }
             args[(*arg_count)++] = strdup(*final_line+strlen(prefix));
-            // we got arguments.
+            /* we got arguments. */
         }
         else
             break;
@@ -88,7 +88,7 @@ n_subst(char *template, int arg_count, char **args)
     }
 }
 
-// changes in 'code'
+/* changes in 'code' */
 char *
 find_template(const char *prefix, char *code)
 {
@@ -132,11 +132,13 @@ void set_progress (int current_section, int phigh, int plow) {
         section_fraction = 1;
 			
     percent = prev_waypoint + (section_span * section_fraction);
-			
-    //fprintf(stderr, "waypoint: %s (%i); prev endpercent %i; span: %i; fraction: %.9f (%i / %i); percent: %i\n",
-    //        waypoints[current_section].progress_id,
-    //        current_section, prev_waypoint, section_span, 
-    //        section_fraction, plow, phigh, percent);
+
+#if 0
+    fprintf(stderr, "waypoint: %s (%i); prev endpercent %i; span: %i; fraction: %.9f (%i / %i); percent: %i\n",
+            waypoints[current_section].progress_id,
+            current_section, prev_waypoint, section_span, 
+            section_fraction, plow, phigh, percent);
+#endif
 
     debconf_progress_set(debconf, percent);
 }
@@ -177,8 +179,8 @@ exec_debootstrap(char **argv){
         dup2(2, 1);
 
         setenv("PERL_BADLANG", "0", 1);
-        // These are needed to hack around a hack (!) in update-inetd
-        // and to not confuse debconf's postinst
+        /* These are needed to hack around a hack (!) in update-inetd
+         * and to not confuse debconf's postinst */
         unsetenv("DEBIAN_HAS_FRONTEND");
         unsetenv("DEBIAN_FRONTEND");
         unsetenv("DEBCONF_FRONTEND");
@@ -208,7 +210,7 @@ exec_debootstrap(char **argv){
     {
         line[llen-1] = 0;
 
-	//fprintf(stderr, "got line: %s\n", line);
+	/* fprintf(stderr, "got line: %s\n", line); */
 	
         ptr = line;
         switch (ptr[0])
@@ -216,7 +218,7 @@ exec_debootstrap(char **argv){
             case 'E':
                 {
                     ptr += 3;
-                    // ptr now contains the identifier of the error.
+                    /* ptr now contains the identifier of the error. */
                     template = find_template("error", ptr);
                     args = read_arg_lines("EA: ", ifp, &arg_count, &line,
 					  &llen);
@@ -236,7 +238,7 @@ exec_debootstrap(char **argv){
                         ptr = n_sprintf(line+4, arg_count, args);
                         if (ptr == NULL)
                             return -1;
-                        // fallback error message
+                        /* fallback error message */
                         debconf_subst(debconf, DEBCONF_BASE "fallback-error",
 				      "ERROR", ptr);
                         debconf_input(debconf, "critical",
@@ -246,12 +248,12 @@ exec_debootstrap(char **argv){
                     }
                     else
                     {
-                        // err, don't really know what to do here... there
-                        // should always be a fallback...
+                        /* err, don't really know what to do here... there
+                         * should always be a fallback... */
                     }
                     return -1;
                 }
-            case 'W':  // FIXME
+            case 'W':  /* FIXME */
                 {
                     args = read_arg_lines("WA: ", ifp, &arg_count, &line,
 					  &llen);
@@ -269,8 +271,8 @@ exec_debootstrap(char **argv){
 
                         di_log(DI_LOG_LEVEL_OUTPUT, ptr);
 		    } else {
-                        // err, don't really know what to do here... there
-                        // should always be a fallback...
+                        /* err, don't really know what to do here... there
+                         * should always be a fallback... */
                     }
                     break;
                 }
@@ -332,10 +334,10 @@ exec_debootstrap(char **argv){
             case 'I':
                 {
                     ptr += 3;
-                    // ptr now contains the identifier of the info
+                    /* ptr now contains the identifier of the info */
                     template = find_template("info", ptr);
 
-                    //fprintf(stderr, "info template: %s\n", template);
+                    /* fprintf(stderr, "info template: %s\n", template); */
 		    
                     if (strcmp(ptr, "basesuccess") == 0 && template != NULL)
                     {
@@ -362,7 +364,7 @@ exec_debootstrap(char **argv){
                         ptr = n_sprintf(line+4, arg_count, args);
                         if (ptr == NULL)
                             return -1;
-                        // fallback info message
+                        /* fallback info message */
                         debconf_subst(debconf, DEBCONF_BASE "fallback-info",
 				      "INFO", ptr);
 			debconf_subst(debconf, DEBCONF_BASE "fallback-info",
@@ -373,8 +375,8 @@ exec_debootstrap(char **argv){
                     }
                     else
                     {
-                        // err, don't really know what to do here... there
-                        // should always be a fallback...
+                        /* err, don't really know what to do here... there
+                         * should always be a fallback... */
                     }
                 }
         }
